feat: Added Knockout.js and simple responsive game area

--- a/index.html
+++ b/index.html
@@ -11,18 +11,16 @@
 
 <body>
 	<!--Content goes here-->
-
-
-
-
-
-
-
-
-
-
-
-
+	<div class="game-area">
+		<div class="card" id="player-card">
+		</div>
+		<div class="character-create" id="character-create">
+		</div>
+		<div class="card" id="enemy-card">
+		</div>
+	</div>
+	
+	<script src='js/lib/knockout-3.4.2.js'></script>
 	<script src="js/app.js"></script>
 </body>
 
