--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<img src="" class="player-portrait" data-bind="attr: { src: portrait }">
 				<div class="player-detail">
 					<h2 data-bind="text: name"></h2>
-					<h3>Level <span data-bind="text: level"></span> <span data-bind="text: cl"></span></h3>
+					<h3>Level <span data-bind="text: level"></span> <span data-bind="text: cl().name"></span></h3>
 				</div>
 			</div>
 			<table>
