feat: Player now has maximum of 3 rerolls

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
 						</tr>
 					</tbody>
 				</table>
-				<button class="btn-ready" type="submit">Begin</button>
+				<h3>Rerolls remaining: <span data-bind="text: player().rerolls"></span></h3>
+				<button class="btn-ready" type="submit">Reroll</button>
 			</form>
 			
 		</div>
