--- a/index.html
+++ b/index.html
@@ -72,13 +72,32 @@
 					</tbody>
 				</table>
 				<h3>Rerolls remaining: <span data-bind="text: rerolls"></span></h3>
-				<button class="btn-ready" type="submit">Reroll</button>
+				<button class="btn-reroll" type="submit">Reroll</button>
+				<button class="btn-start" type="button" data-bind="click: $parent.toggleTown">Begin</button>
 			</form>
+			
+			<!--Town Screen-->
+			<div class="town-screen" data-bind="visible: townShow()">
+				<button class="start-game" type="button" data-bind="click: toggleBattle">Fight next battle!</button>
+			</div>
+			
+			<!--Battle Screen-->
+			<div class="battle-screen" data-bind="visible: battleShow()">
+				<button class="start-game" type="button">Attack</button>
+			</div>
 			
 		</div>
 		
 		<!--Enemy Card-->
-		<div class="card">
+		<div class="card" data-bind="with: currentEnemy">
+			<div class="enemy-header">
+				<img src="" class="enemy-portrait" data-bind="attr: { src: portrait }">
+				<div class="enemy-detail">
+					<h2 data-bind="text: name"></h2>
+				</div>
+			</div>
+			
+			<h3>Health: <span data-bind="text: currentHealth"></span> / <span data-bind="text: maxHealth"></span></h3>
 		</div>
 	</div>
 	
