feat: Attack button now attacks enemy

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 			
 			<!--Battle Screen-->
 			<div class="battle-screen" data-bind="visible: battleShow()">
-				<button class="start-game" type="button">Attack</button>
+				<button class="start-game" type="button" data-bind="click: playerAttack">Attack</button>
 			</div>
 			
 		</div>
