feat: Adjusted style of the start game screen

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 		
 		<!--UI Section-->
 		<div class="ui" id="ui">
-			<div class="start-game" data-bind="visible: startGameShow()">
-				<button class="btn centered" type="button" data-bind="click: toggleStartGame">Start new game</button>
+			<div class="ui-screen start-game" data-bind="visible: startGameShow()">
+				<h1 class="btn-start" data-bind="click: toggleStartGame">Start Game</h1>
 			</div>
 			
 			<!--Character Creation-->
