--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<link rel="stylesheet" href="css/app.css">
 	<!--Link to Google Fonts-->
 	<link href="https://fonts.googleapis.com/css?family=Tangerine:400,700" rel="stylesheet">
+	<!--Link to Font Awesome-->
+	<link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -53,8 +55,12 @@
 						<label for="name">Name: </label>
 						<input id="name" type="text" required data-bind="value: nameInput">
 					</div>
-					<div class="portrait-select" data-bind="foreach: portraits">
-						<img class="portrait" data-bind="click: $parent.togglePortraitSelection, attr: { src: path }, style: { border: active() ? '2px solid red' : '2px solid transparent' }">
+					<div class="portrait-select">
+						<i class="fa fa-chevron-left" aria-hidden="true" data-bind="click: togglePortrait.bind($data, -1)"></i>
+						<!-- ko foreach: portraits -->
+						<img class="portrait" data-bind="visible: active(), attr: { src: path }">
+						<!-- /ko -->
+						<i class="fa fa-chevron-right" aria-hidden="true" data-bind="click: togglePortrait.bind($data, 1)"></i>
 					</div>
 					<div class="class-select" data-bind="foreach: classes">
 						<div class="class" data-bind="click: $parent.toggleClassSelection, style: { border: active() ? '2px solid red' : '2px solid grey' }">
