feat: Added gold into the game acquired after each victory

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 							</tr>
 						</tbody>
 					</table>
+					
+					<h4>Gold: <span data-bind="text: gold"></span></h4>
 				</div>
 			</div>
 			<div class="card-back entity-back">
