feat: Added some progression to the game
There are now three tiers of enemies and a variable to track how many battles have been won. Player moves up through enemy tiers after certain amounts of battles won.

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
 				<!--Town Screen-->
 				<div class="ui-screen town-screen" data-bind="visible: townShow()">
 					<h1>Town</h1>
+					<h4>Battles Won: <span data-bind="text: wins"></span></h4>
 					<div class="centered">
 						<button class="btn" type="button" data-bind="click: toggleBattle">Fight next battle!</button>
 						<!-- ko with: player -->
