--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					
 				<div>
 					<h4>Health: <span data-bind="text: currentHealth"></span> / <span data-bind="text: maxHealth"></span></h4>				
-					<table class="stats" >
+					<table class="stat-table" >
 						<tbody data-bind="foreach: stats">
 							<tr>
 								<td data-bind="text: name"></td>
@@ -43,37 +43,37 @@
 				<div class="entity-back" data-bind="visible: playerBackShow()">
 				</div>
 				<div class="entity-front" data-bind="with: player, visible: playerInventoryShow()">
-					<h3>Inventory</h3>
+					<h2>Inventory</h2>
+					<h4>Gold: <span data-bind="text: gold"></span></h4>
 					
-					<table class="items" >
+					<table class="inventory-table" >
 						<tbody>
 							<tr>
-								<td>Head</td>
+								<td class="inventory-type"><img class="inventory-icon" src="images/head.png"></td>
 								<td data-bind="text: inventory().head().name"></td>
 							</tr>
 							<tr>
-								<td>Body</td>
+								<td class="inventory-type"><img class="inventory-icon" src="images/torso.png"></td>
 								<td data-bind="text: inventory().body().name"></td>
 							</tr>
 							<tr>
-								<td>Weapon</td>
+								<td class="inventory-type"><img class="inventory-icon" src="images/sword.png"></td>
 								<td data-bind="text: inventory().weapon().name"></td>
 							</tr>
 							<tr>
-								<td>Boots</td>
+								<td class="inventory-type"><img class="inventory-icon" src="images/feet.png"></td>
 								<td data-bind="text: inventory().boots().name"></td>
 							</tr>
 							<tr>
-								<td>Gloves</td>
+								<td class="inventory-type"><img class="inventory-icon" src="images/hands.png"></td>
 								<td data-bind="text: inventory().gloves().name"></td>
 							</tr>
 							<tr>
-								<td>Misc</td>
+								<td class="inventory-type"><img class="inventory-icon" src="images/ring.png"></td>
 								<td data-bind="text: inventory().misc().name"></td>
 							</tr>
 						</tbody>
 					</table>
-					<h4>Gold: <span data-bind="text: gold"></span></h4>
 				</div>
 			</div>
 		</div>
@@ -113,11 +113,11 @@
 					<h1>Roll Stats</h1>
 					<div class="reroll">
 						<h4>Rerolls remaining: <span data-bind="text: rerolls"></span></h4>
-						<table>
+						<table class="reroll-table">
 							<tbody data-bind="foreach: stats">
-								<tr class="stat">
+								<tr>
 									<td data-bind="text: name"></td>
-									<td data-bind="text: value"></td>
+									<td class="text-right" data-bind="text: value"></td>
 								</tr>
 							</tbody>
 						</table>
@@ -165,9 +165,10 @@
 					<div class="ui-column">
 						<div class="item-list" data-bind="foreach: items">
 							<div class="item" data-bind="visible: available(), click: $parent.toggleItem, style: { border: active() ? '2px solid red' : '2px solid grey' }">
-								<p data-bind="text: type"></p>
-								<p data-bind="text: name"></p>
-								<p data-bind="text: price"></p>
+								<h4 data-bind="text: name"></h4>
+								<p><em data-bind="text: description()"></em></p>
+								<p><strong>Type: </strong><span data-bind="text: type"></span></p>
+								<p><strong>Price: </strong><span data-bind="text: price"></span>g</p>
 							</div>
 						</div>
 						<p class="town-log" data-bind="text: townLog"></p>
